--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,4 +1,5 @@
 $primaryMain: rgba(255, 158, 13, 1);
+$primarySecondary: rgba(254, 102, 0, 1);
 $primaryTransparent: rgba(255, 158, 13, 0.7);
 $darkBackground: rgba(11, 13, 17, 0.9);
 
