--- a/src/components/Common/Header/styles.scss
+++ b/src/components/Common/Header/styles.scss
@@ -22,7 +22,7 @@
     .nav {
       display: flex;
       justify-content: space-between;
-      width: 80%;
+      width: 75%;
       a {
         color: variables.$white100Color;
         text-decoration: none;
@@ -37,14 +37,16 @@
       }
     }
     .loginUser {
-      width: 288px;
+      flex-grow: 1;
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      padding-left: 50px;
+      box-sizing: border-box;
       p {
         color: variables.$white100Color;
         font-size: 16px;
-        width: 223px;
+        flex-grow: 1;
         margin: 0 15px 0 0;
         padding: 0;
         text-align: right;
