--- a/src/components/MusicEditBlock/styles.scss
+++ b/src/components/MusicEditBlock/styles.scss
@@ -1,33 +1,37 @@
 @use "../../utils/variables";
 
-.UserInfoEditBlock {
+.MusicEditBlock {
   position: relative;
   display: flex;
   height: 70vh;
-  .userId {
-    margin-bottom: 10px !important;
-    color: variables.$white100Color;
-  }
-  .avatarBlock {
-    width: 30%;
+  width: 100%;
+  flex-direction: column;
+  .userInfo {
+    width: 100%;
+    height: 100px;
+    background: variables.$primaryMain;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-right: 100px;
+    border-radius: 50px;
+    padding: 0 200px;
+    box-sizing: border-box;
+    margin-bottom: 30px;
     .avatar {
+      width: 75px;
+      margin-right: 100px;
       img {
         border-radius: 50px;
         width: 100%;
+        height: 100%;
       }
     }
-    .deleteButton {
-      margin-top: 20px;
-      width: 200px;
-      background: variables.$primaryMain;
-      color: variables.$white100Color;
-      &:hover {
-        background: variables.$primaryTransparent;
-        text-decoration: none;
+    .name {
+      p {
+        font-size: 20px;
+        color: variables.$white100Color;
+        span {
+          margin: 0 10px;
+        }
       }
     }
   }
@@ -36,6 +40,12 @@
     flex-grow: 1;
     box-sizing: border-box;
     padding-right: 15%;
+    .musicId {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 24px;
+    }
     span {
       margin-left: 10px;
       color: variables.$white100Color;
@@ -43,6 +53,10 @@
     p {
       margin: 0;
       padding: 0;
+    }
+    .flexWrapper {
+      display: flex;
+      justify-content: space-between;
     }
     .inputBlock {
       margin-bottom: 20px;
@@ -63,6 +77,23 @@
         margin-bottom: 7px;
         color: variables.$white75Color !important;
       }
+      .helper {
+        font-size: 12px;
+        font-style: italic;
+        color: variables.$white100Color !important;
+        margin-bottom: 7px;
+      }
+      input[type="file"] {
+        font-size: 16px;
+        width: 100%;
+        font-style: italic;
+      }
+      .uploadError {
+        margin-top: 10px;
+        font-size: 14px;
+        font-style: italic;
+        color: variables.$errorColor;
+      }
       textarea {
         font-size: 16px;
         resize: none;
@@ -79,39 +110,18 @@
         }
       }
     }
-    .userRole {
-      margin-bottom: 20px;
-      width: 400px;
-      display: flex;
-      align-items: center;
-      p {
-        margin-right: 20px;
-      }
-      .roleButtons {
-        width: 140px;
-        box-sizing: border-box;
-        button {
-          color: variables.$white100Color;
-          text-transform: none;
-          height: 25px;
-          width: 70px;
-          box-sizing: border-box;
-          background: variables.$primaryTransparent;
-          border-radius: 0;
-          &.active {
-            background: variables.$primaryMain;
-            text-decoration: underline;
-          }
-          &:first-child {
-            border-top-left-radius: 10px;
-            border-bottom-left-radius: 10px;
-          }
-          &:last-child {
-            border-top-right-radius: 10px;
-            border-bottom-right-radius: 10px;
-          }
-        }
-      }
+  }
+  .addButton {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, 0);
+    height: 30px;
+    background: variables.$primaryMain;
+    color: variables.$white100Color;
+    &:hover {
+      background: variables.$primaryTransparent;
+      text-decoration: none;
     }
   }
   .editInfo {
