--- a/src/pages/UsersListPage/styles.scss
+++ b/src/pages/UsersListPage/styles.scss
@@ -2,5 +2,7 @@
   .container {
     padding-left: 200px;
     padding-right: 200px;
+    display: flex;
+    justify-content: space-between;
   }
 }
